Se crean usuarios, listkeys y playchannel

--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -80,8 +80,10 @@
 	            <i class="icon-play playsong"></i>
 	            <i class="icon-trash clearlist"></i>
 	            <i class="icon-share skip"></i>
-           
+				<div id="listurl"></div>
+				<div id="playchannelurl"></div>
             </div>
+			
         </div>
       </div>
     </div>          
