--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+{{> currentvideo}}
   
   <div class="container">
   <div class="navbar navbar-fixed-top">
@@ -51,8 +51,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-  </div>
-	{{> currentvideo}}
+  </div>	
     {{> musiclist}}
   </div>
 </body>
@@ -66,10 +65,11 @@
               <div id="search">
                   <input placeholder="Busca un tema!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
                   <div id="videoResultsDiv"></div> 
-              </div>
+              </div>			  
               <iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
               <div id="player-div"></div>
-              <div id="wrap-playlist">
+              
+			  <div id="wrap-playlist">
 				<ul class="playlist">
 				{{#each songs}}
 				  <li>{{>song}}</li>
@@ -94,10 +94,8 @@
     </div>          
 </template>
 <template name="currentvideo">
-  <div>
-	{{#if currentVideo}}
-	  {{currentVideo.title}}
-	{{/if}}
+  <div id="currentVideo">
+	  {{currentVideo}}
   </div>
 </template>
 <template name="shares">
