--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -1,6 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SHUKBOX|X|</title>
+  <title>SHUKBOX .:.:.</title>
   <style>
   @media (min-width: 981px) {
     body {
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-{{> currentvideo}}
+
   
   <div class="container">
   <div class="navbar navbar-fixed-top">
@@ -61,14 +61,14 @@
       <div class="span12">
         <div class="row">
           <div class="span2">&nbsp;</div>
-            <div class="span6">
+            <div class="span6" style="padding-top:20px;">
               <div id="search">
                   <input placeholder="Busca un tema!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
                   <div id="videoResultsDiv"></div> 
               </div>			  
               <iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
               <div id="player-div"></div>
-              
+              {{> currentvideo}}
 			  <div id="wrap-playlist">
 				<ul class="playlist">
 				{{#each songs}}
@@ -78,8 +78,7 @@
 			  </div>
             </div>
             <div class="span4">
-	            <h1>SHUKBOX</h1>
-	            <p>REALTIME VIDEO LIST</p>
+	            <h1 class="logo"></h1>
 	            <div id="controls">
 				  <a rel="tooltip" class="playsong tip" title="Play All"><i class="icon-play"></i></a>
 				  <a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
@@ -94,26 +93,30 @@
     </div>          
 </template>
 <template name="currentvideo">
-  <div id="currentVideo">
-	  {{currentVideo}}
+  <div id="currentVideo" class="current">
+	{{#if currentVideo}}
+	  {{currentVideo.title}}
+	{{/if}}
   </div>
 </template>
 <template name="shares">
   <div id="shares">
 	{{#if playlist_url}}
 	  <p><strong>Share the playlist:</strong></p>
-	  <div id="listurl"><input type="text" value="{{playlist_url}}" /></div>
+	  <div id="listurl"><a style="margin-top:-10px; margin-right:6px;" href="javascript:void(0);" class="btn">Copy</a><input style="width:130px;" type="text" value="{{playlist_url}}" /></div>
 	{{/if}}
 	{{#if playchannel_url}}
 	  <p><strong>Share the playchannel:</strong></p>
-	  <div id="playchannelurl"><input type="text" value="{{playchannel_url}}" /></div>
+	  <div id="playchannelurl"><a style="margin-top:-10px; margin-right:6px;" href="javascript:void(0);" class="btn">Copy</a><input style="width:130px;"  type="text" value="{{playchannel_url}}" /></div>
 	{{/if}}
   </div>
 </template>
 <template name="song">
   <div class="song">
     <span class="title">{{title}}</span>
-    <input type="button" value="X" class="delete" />
-    <input type="button" value="+1" class="vote" />
+    <div class="actions">
+	  <a href="javascript:void(0);" class="delete">X<a/>
+	  <a href="javascript:void(0);" class="vote"></a>
+	</div>
   </div>
 </template>
