--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -27,70 +27,63 @@
 </head>
 
 <body>
-
-  
   <div class="container">
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#"></a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            {{#if currentUser}}
-            <li><a href="javascript:Meteor.logout();">Logout</a></li>
-            {{else}}
-            <li><a href="javascript:Meteor.loginWithFacebook();">Login with facebook</a></li>
-            <li><a href="javascript:Meteor.loginWithGoogle();"></a></li>
-            {{/if}}
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </div>	
-    {{> musiclist}}
-  </div>
-</body>
-<template name="musiclist">  
-    {{invokeAfterLoad}}
+	<div class="navbar navbar-fixed-top">
+	  <div class="navbar-inner">
+		<div class="container">
+		  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </a>
+		  <a class="brand" href="#"></a>
+		  <div class="nav-collapse">
+			<ul class="nav">
+			  {{#if currentUser}}
+			  <li><a href="javascript:Meteor.logout();">Logout</a></li>
+			  {{else}}
+			  <li><a href="javascript:Meteor.loginWithFacebook();">Login with facebook</a></li>
+			  <li><a href="javascript:Meteor.loginWithGoogle();"></a></li>
+			  {{/if}}
+			</ul>
+		  </div><!--/.nav-collapse -->
+		</div>
+	  </div>
+	</div>
     <div class="row">
       <div class="span12">
         <div class="row">
           <div class="span2">&nbsp;</div>
             <div class="span6" style="padding-top:20px;">
-              <div id="search">
-                  <input placeholder="Busca un tema!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
-                  <div id="videoResultsDiv"></div> 
-              </div>			  
-              <iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
-              <div id="player-div"></div>
-              {{> currentvideo}}
-			  <div id="wrap-playlist">
-				<ul class="playlist">
-				{{#each songs}}
-				  <li>{{>song}}</li>
-				{{/each}}
-				</ul>
+			  {{> search}} 
+			  <iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
+			  <div id="player-div"></div> 
+			  {{> musiclist}}
 			  </div>
-            </div>
-            <div class="span4">
-	            <h1 class="logo"></h1>
-	            <div id="controls">
-				  <a rel="tooltip" class="playsong tip" title="Play All"><i class="icon-play"></i></a>
-				  <a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
-				  <a rel="tooltip" class="skip tip" title="Skip Video"><i class="icon-forward"></i></a>
-				  <a rel="tooltip" class="share tip" title="Share Video"><i class="icon-share"></i></a>				
-				</div>
-				{{> shares}}
-            </div>
-			
-        </div>
-      </div>
-    </div>          
+			  <div class="span4">
+				  <h1 class="logo"></h1>
+				  <div id="controls">
+					<a rel="tooltip" class="playsong tip" title="Play All"><i class="icon-play"></i></a>
+					<a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
+					<a rel="tooltip" class="skip tip" title="Skip Video"><i class="icon-forward"></i></a>
+					<a rel="tooltip" class="share tip" title="Share Video"><i class="icon-share"></i></a>				
+				  </div>
+				  {{> shares}}
+			  </div>
+		</div>
+	  </div>
+	</div>	
+</body>
+<template name="musiclist">  
+    {{invokeAfterLoad}}
+	{{> currentvideo}}
+	<div id="wrap-playlist">
+	  <ul class="playlist">
+	  {{#each songs}}
+		<li>{{>song}}</li>
+	  {{/each}}
+	  </ul>
+	</div>       
 </template>
 <template name="currentvideo">
   <div id="currentVideo" class="current">
@@ -119,4 +112,10 @@
 	  <a href="javascript:void(0);" class="vote"></a>
 	</div>
   </div>
+</template>
+<template name="search">
+  <div id="search">
+	  <input placeholder="Busca un tema!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
+	  <div id="videoResultsDiv"></div> 
+  </div>  
 </template>
