Se mejoro la funcionalidad de las listas

--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -97,13 +97,9 @@
 	<a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
 	<a rel="tooltip" class="skip tip" title="Skip Video"><i class="icon-forward"></i></a>
 	<a rel="tooltip" class="share tip" title="Share Video"><i class="icon-share"></i></a>
-	<a rel="tooltip" class="save tip" title="Save List"><i class="icon-file"></i></a>
 	<a rel="tooltip" class="sync tip" title="Sync List"><i class="icon-retweet"></i></a>
   </div>
-  <div id="save-control">
-	<a class="btn savelist" href="javascript:void(0);">Save</a>
-	<input type="text" id="listname" name="listname" value="Untitled-list"/>
-  </div>  
+
 </template>
 <template name="currentvideo">
   {{#if currentVideo}}
@@ -154,11 +150,20 @@
   {{on_ready_search}}
 </template>
 <template name="playlists">
+	  <h3>My lists</h3>
+	  
   	  <ul id="mylists">
 	  {{#each mylists}}
 		<li>{{>playlist}}</li>
 	  {{/each}}
 	  </ul>
+	  <br/>
+	  <div id="save-control">
+		<a class="btn savelist" href="javascript:void(0);">Save</a>
+		<input type="text" id="listname" name="listname" value="Untitled-list"/>
+	  </div>  	  
+	  <button class="btn update">Save current list</button>
+	  <button class="btn create">Add empty list</button>
 </template>
 <template name="playlist">
   <span>{{name}}</span>
