--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -58,6 +58,7 @@
 				  {{> controls}}
 				  {{> shares}}
 				  {{> playlists}}
+
 			  </div>
 		</div>
 	  </div>
@@ -68,6 +69,7 @@
 
 	{{#if currentUser}}
 	  {{#if signedup}}
+		<li><a href="javascript:void(0);">{{currentUser.name}}</a></li>
 		<li><a href="javascript:logout();">Logout</a></li>
 	  {{else}}
 		<li><a href="javascript:login('facebook');">Login with facebook</a></li>
@@ -90,41 +92,6 @@
 	</div>
 	{{invokeAfterLoad}}
 </template>
-<template name="controls">
-
-  <div id="controls">
-	<a rel="tooltip" class="playsong tip" title="Play All"><i class="icon-play"></i></a>
-	<a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
-	<a rel="tooltip" class="skip tip" title="Skip Video"><i class="icon-forward"></i></a>
-	<a rel="tooltip" class="share tip" title="Share Video"><i class="icon-share"></i></a>
-	<a rel="tooltip" class="sync tip" title="Sync List"><i class="icon-retweet"></i></a>
-  </div>
-
-</template>
-<template name="currentvideo">
-  {{#if currentVideo}}
-  <div id="currentVideo" class="current">	
-	  {{currentVideo.title}}	
-  </div>
-  {{on_current_video_ready}}
-  {{/if}}
-</template>
-<template name="shares">
-  <div id="shares">
-	{{#if playlist_url}}	  
-	  <p style="display:none;"><strong>Share the playlist:</strong></p>
-	  <div style="display:none;" id="listurl"><input id="playlist_url" style="width:50%" type="text" value="{{playlist_url}}" /></div>
-	{{/if}}
-	{{#if playchannel_url}}
-	  
-	  <p><strong>Share:</strong></p>
-	  <div id="playchannelurl"><input id="playchannel_url" style="width:50%" type="text" value="{{playchannel_url}}" /></div>
-	  <div class="fb-like" data-href="{{playchannel_url}}" data-send="true" data-width="50" data-show-faces="false"></div>
-	  {{on_playchannel_ready}}
-	  <!--<div class="fb-comments" data-href="{{playchannel_url}}" data-num-posts="2" data-width="370"></div>-->
-	{{/if}}
-  </div>
-</template>
 <template name="song">
   <div class="song">
 	  {{#if fbid}}
@@ -142,6 +109,37 @@
 	</div>
   </div>
 </template>
+<template name="controls">
+  <div id="controls">
+	<a rel="tooltip" class="playsong tip" title="Play All"><i class="icon-play"></i></a>
+	<a rel="tooltip" class="clearlist tip" title="Clear List"><i class="icon-trash"></i></a>
+	<a rel="tooltip" class="skip tip" title="Skip Video"><i class="icon-forward"></i></a>
+	<a rel="tooltip" class="sync tip" title="Sync List"><i class="icon-retweet"></i></a>
+  </div>
+</template>
+<template name="currentvideo">
+  {{#if currentVideo}}
+  <div id="currentVideo" class="current">	
+	  {{currentVideo.title}}	
+  </div>
+  {{on_current_video_ready}}
+  {{/if}}
+</template>
+<template name="shares">
+  <div id="shares">
+	{{#if playlist_url}}	  
+	  <p style="display:none;"><strong>Share the playlist:</strong></p>
+	  <div style="display:none;" id="listurl"><input id="playlist_url" style="width:50%" type="text" value="{{playlist_url}}" /></div>
+	{{/if}}
+	{{#if playchannel_url}}	  
+	  <p><strong>Share:</strong></p>
+	  <div id="playchannelurl"><input id="playchannel_url" style="width:50%" type="text" value="{{playchannel_url}}" /></div>
+	  <div class="fb-like" data-href="{{playchannel_url}}" data-send="true" data-width="50" data-show-faces="false"></div>
+	  {{on_playchannel_ready}}
+	  <!--<div class="fb-comments" data-href="{{playchannel_url}}" data-num-posts="2" data-width="370"></div>-->
+	{{/if}}
+  </div>
+</template>
 <template name="search">
   <div id="search">
 	  <input placeholder="Search a video!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
@@ -150,21 +148,29 @@
   {{on_ready_search}}
 </template>
 <template name="playlists">
-	  <h3>My lists</h3>
-	  
-  	  <ul id="mylists">
-	  {{#each mylists}}
-		<li>{{>playlist}}</li>
-	  {{/each}}
-	  </ul>
-	  <br/>
-	  <div id="save-control">
-		<a class="btn savelist" href="javascript:void(0);">Save</a>
-		<input type="text" id="listname" name="listname" value="Untitled-list"/>
-	  </div>  	  
-	  <button class="btn update">Save current list</button>
-	  <button class="btn create">Add empty list</button>
+	  {{#if signedup}}
+		<h3>My lists</h3>	  
+		<ul id="mylists">
+		{{#each mylists}}
+		  <li>{{>playlist}}</li>
+		{{/each}}
+		</ul>
+		<br/>
+		<div id="save-control">
+		  <a class="btn savelist" href="javascript:void(0);">Save</a>
+		  <input type="text" id="listname" name="listname" value="Untitled-list"/>
+		</div>  	  
+		<button class="btn update">Save current list</button>
+		<button class="btn create">Add empty list</button>
+	  {{else}}
+	  <div class="alert alert-success call-to-action">
+		Login with facebook or google to save lists
+		<a class="btn" href="javascript:login('facebook');">Login with facebook</a>
+		<a class="btn" href="javascript:login('google');">Login with google</a>
+	  </div>	  
+	  {{/if}}
 </template>
 <template name="playlist">
-  <span>{{name}}</span>
+  <span class="{{is_current}}">{{name}}</span>
+  <a href="javascript:void(0);" class="delete"><i class="icon-remove"></i><a/>
 </template>
