--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -32,12 +32,12 @@
 	<div id="mainnav" class="navbar navbar-fixed-top">
 	  <div class="navbar-inner">
 		<div class="container">
+		  <div class="span1">&nbsp;</div>
 		  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </a>
-		  <a class="brand" href="#"></a>
 		  <div class="nav-collapse">
 		  {{> navbar}}
 		  </div><!--/.nav-collapse -->
@@ -47,19 +47,20 @@
     <div class="row">
       <div class="span12">
         <div class="row">
-          <div class="span2">&nbsp;</div>
-            <div class="span6" style="padding-top:20px;">
-			  {{> search}} 
-			  <iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
-			  <div id="player-div"></div>			  
-			  {{> modifiers}}
-			  {{> shares}}
-			  {{> musiclist}}
-			  </div>
-			  <div class="span4">
-				  <h1 class="logo"></h1>				  
-				  {{> playlists}}
-			  </div>
+		  <div class="span1">&nbsp;</div>
+		  <div class="span3">
+			  <h1 class="logo"></h1>				  
+			  {{> playlists}}
+		  </div>
+		  <div class="span6" style="padding-top:20px;">
+			{{> search}}
+			<iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
+			<div id="player-div"></div>			  
+			{{> modifiers}}
+			{{> shares}}
+			{{> musiclist}}
+		  </div>
+		  <div class="span2">&nbsp;</div> 
 		</div>
 	  </div>
 	</div>	
@@ -67,8 +68,10 @@
 <template name="navbar">
   <ul class="nav">
 	{{#if currentUser}}
-	  {{#if signedup}}	  
-		<li><img width="25" height="25" src="{{profile_image_url}}" /></li>
+	  {{#if signedup}}
+		{{#if profile_image_url}}
+		  <li><img width="25" height="25" src="{{profile_image_url}}" /></li>
+		{{/if}}
 		<li><a href="javascript:void(0);">{{currentUser.name}}</a></li>
 		<li><a href="javascript:logout();">Logout</a></li>
 	  {{else}}
@@ -90,7 +93,6 @@
 	  {{/each}}
 	  </ul>
 	</div>
-	{{invokeAfterLoad}}
 </template>
 <template name="song">
   <div class="song">
@@ -135,7 +137,7 @@
 </template>
 <template name="search">
   <div id="search">
-	  <input placeholder="Search a video!" autofocus="autofocus" class="nextsong" id="nextsong" type="text"/>
+	  <input class="nextsong" id="nextsong" type="text"/>
 	  <div id="videoResultsDiv"></div> 
   </div>
   {{on_ready_search}}
