Se ahorraron un par de peticiones en el search

--- a/shuk/sharedmusic.html
+++ b/shuk/sharedmusic.html
@@ -137,7 +137,7 @@
 </template>
 <template name="search">
   <div id="search">
-	  <input class="nextsong" id="nextsong" type="text"/>
+	  <input placeholder="Search a video!" class="nextsong" id="nextsong" type="text"/>
 	  <div id="videoResultsDiv"></div> 
   </div>
   {{on_ready_search}}
